Improve spark shell job run